--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"laravel/framework": "4.2.*",
 		"barryvdh/laravel-ide-helper": "~1.11",
 		"cviebrock/eloquent-sluggable": "2.0.*",
-		"simplepie/simplepie": "dev-master"
+		"simplepie/simplepie": "dev-master",
+		"yajra/laravel-datatables-oracle": "~3.0"
 	},
 	"autoload": {
 		"classmap": [
