--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "jquery-validation": "jquery.validate#~1.13.0",
     "PACE": "pace#~1.0.2",
     "jquery-slimscroll": "slimScroll#~1.3.8",
-    "classie": "~1.0.1"
+    "classie": "~1.0.1",
+    "select2": "~4.0.3"
   }
 }
