--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "PACE": "pace#~1.0.2",
     "jquery-slimscroll": "slimScroll#~1.3.8",
     "classie": "~1.0.1",
-    "select2": "~4.0.3"
+    "select2": "~4.0.3",
+    "bootbox.js": "bootbox#~4.4.0"
   }
 }
