--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,8 @@
     "jquery-slimscroll": "slimScroll#~1.3.8",
     "classie": "~1.0.1",
     "select2": "~4.0.3",
-    "bootbox.js": "bootbox#~4.4.0"
+    "bootbox.js": "bootbox#~4.4.0",
+    "summernote": "~0.8.1",
+    "bootstrap-datepicker": "~1.6.1"
   }
 }
