--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 			"app/tests/TestCase.php"
 		],
 		"psr-4": {
-			"Repositories\\" : "app/Repositories"
+			"Repositories\\" : "app/repositories"
 		},
 		"files": [
 			"app/helper.php"
